--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,50 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+  font-size: 28px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+button.toggle-content {
+  width: 100%;
+  background: none;
+  border: 1px solid #ddd;
+  box-shadow: none;
+  margin: 0;
+  padding: 12px;
+  font-size: 14px;
+  text-align: left;
+}
+
+.collapse-content {
+  display: none;
+  padding: 32px 20px;
+  border-width: 0 1px 1px 1px;
+  border-style: solid;
+  border-color: #ddd;
+  font-size: 14px;
+}
+
+li:not(:first-of-type) button.toggle-content {
+  border-top: none;
+}
+
+li:not(:last-of-type) .collapse-content {
+  border-top: none;
+}
+
+.collapse-content.show {
+  display: block;
+}
