--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ ul {
   padding: 0;
 }
 
-button.toggle-content {
+.accordion-header {
   width: 100%;
   background: none;
   border: 1px solid #ddd;
@@ -38,7 +38,7 @@ button.toggle-content {
   text-align: left;
 }
 
-.collapse-content {
+.accordion-panel {
   display: none;
   padding: 32px 20px;
   border-width: 0 1px 1px 1px;
@@ -47,14 +47,14 @@ button.toggle-content {
   font-size: 14px;
 }
 
-li:not(:first-of-type) button.toggle-content {
+li:not(:first-of-type) .accordion-header {
   border-top: none;
 }
 
-li:not(:last-of-type) .collapse-content {
+li:not(:last-of-type) .accordion-panel {
   border-top: none;
 }
 
-.collapse-content.show {
+.accordion-panel.show {
   display: block;
 }
